--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "animejs": "^3.2.1",
     "jquery": "^3.5.1",
+    "mobx": "^6.0.4",
+    "mobx-react": "^7.0.5",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -39,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.2",
     "@types/jquery": "^3.5.5",
     "@types/react": "^17.0.0"
   }
